2008-05-27  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Accidently left a couple fixes out of the previous commit.

        * webcore-base.bkl:

2008-05-27  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Adding JSHTMLElementWrapperFactory.cpp.
        
        * WebCoreSources.bkl:

2008-05-27  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Simon.

        Fix linking error (missing gdi32 and user32 libraries).

        * WebCore.pro:

2008-05-27  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Simon.

        Update the WebKit.qrc so that Web Inspector is functional again.

        * page/inspector/WebKit.qrc:

2008-05-26  Alp Toker  <alp@nuanti.com>

        Reviewed by Anders.

        http://bugs.webkit.org/show_bug.cgi?id=16495
        [GTK] Accessibility support with ATK/AT-SPI

        Implement basic action, text and editable text accessibility.

        Provide utility functions to simplify const string return and casting
        and add some more stubs.

        It's now possible to navigate and manipulate forms and text using
        assistive technologies.

        * page/gtk/AccessibilityObjectWrapperAtk.cpp:
        (returnString):
        (core):
        * platform/gtk/LocalizedStringsGtk.cpp:
        (WebCore::AXButtonActionVerb):
        (WebCore::AXRadioButtonActionVerb):
        (WebCore::AXTextFieldActionVerb):
        (WebCore::AXCheckedCheckBoxActionVerb):
        (WebCore::AXUncheckedCheckBoxActionVerb):
        (WebCore::AXLinkActionVerb):
        (WebCore::imageTitle):

2008-05-25  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders.

        - bind the window's "document" and "window" properties to static slots
        1.7% speedup on Acid3 test 26
        
        Only the "document" part matters for Acid3, but since I was doing
        this anyway, "window" also seemed like a good one to optimize.

        * bindings/js/JSDOMWindowBase.cpp: