@@ -21,7 +21,7 @@ This page's JavaScript calls an anonymous function which calls eval().
 <br>
 To use this test, load it in the browser then load the WebInspector and look at
 the profile.  Beneath onload and startTest it should show an (anonymous function)
-which has a (global code) child.
+which has a (program) child.
 <div id="output"></div>
 </body>
 </html>
