@@ -28,8 +28,8 @@ This page's JavaScript has a call to apply() in it.
 <br>
 <br>
 To use this test, load it in the browser then load the WebInspector and look at
-the profile.  In the profile there should be a call to fakeInteriorFunction() but
-not to apply().
+the profile.  In the profile there should be a call to fakeInteriorFunction() and
+a call to apply().
 <div id="output"></div>
 </body>
 </html>
