@@ -28,8 +28,8 @@ This page's JavaScript has a call to call() in it.
 <br>
 <br>
 To use this test, load it in the browser then load the WebInspector and look at
-the profile.  In the profile there should be a call to fakeObject with
-fakeInteriorFunction as its child, but call() should not be shown.
+the profile.  In the profile there should be a call to fakeObject() with call() as
+its child and a fakeInteriorFunction() as call()'s child.
 <div id="output"></div>
 </body>
 </html>
