@@ -1,0 +1,28 @@
+<html>
+<head>
+<script>
+console.profile("Test deep recursion.");
+function startTest()
+{
+    recurse (0);
+
+    console.profileEnd();
+}
+
+function recurse(depth) {
+    if (depth < 5000)
+        recurse(depth + 1);
+}
+
+</script>
+</head>
+
+<body onload="startTest()">
+This page's JavaScript has a very deep recursion.
+<br>
+<br>
+To use this test, load it in the browser then load the WebInspector and look at
+the profile.  The profiler and browser should not crash.
+<div id="output"></div>
+</body>
+</html>
